[Calculator Runner] Use "approximate" approximation mode

The runner calculator isn't entitled for being a scientifically correct calculator.
This keeps seemingly innocent calculations such as "2^0.333333333" from eating all RAM until it crashes.
A hint is added to the result if it is only an approximation.

BUG: 277011
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D4290